--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "16.0.2",
     "ejs": "3.1.8",
     "express": "4.18.1",
+    "mysql2": "2.3.3",
     "nodemon": "2.0.20",
     "sequelize": "^6.23.2"
   },
