--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
   "author": "Pham Phat",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
+    "cors": "^2.8.5",
     "dotenv": "16.0.2",
     "ejs": "3.1.8",
     "express": "4.18.1",
